fix: fixing issue with map not showing

--- a/web-app/src/app/modules/pages/users/users.component.scss
+++ b/web-app/src/app/modules/pages/users/users.component.scss
@@ -3,11 +3,6 @@
   font-weight: semibold;
 }
 
-agm-map {
-  width: 500px;
-  height: 350px;
-}
-
 .edit-information {
   visibility: hidden;
 }
